--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ requests==2.32.3
 rich==13.9.4
 scikit-learn==1.5.2
 scipy==1.14.1
+seaborn==0.13.2
 setuptools==75.6.0
 six==1.16.0
 sniffio==1.3.1
@@ -69,6 +70,7 @@ tensorboard-data-server==0.7.2
 tensorflow==2.18.0
 termcolor==2.5.0
 threadpoolctl==3.5.0
+typing==3.7.4.3
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
