--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
 starlette==0.41.3
+-e git+https://github.com/kirkgo/stock-prediction.git@f7d4ad5b3bc53bfa2496300b4abf218182ee55cf#egg=stock_prediction
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 tensorflow==2.18.0
